Refactor: Update sidebar links in dashboard template for improved organization

--- a/Client/client_app/templates/client_app/dashboard.html
+++ b/Client/client_app/templates/client_app/dashboard.html
@@ -152,9 +152,10 @@
             <a href="#" class="sidebar-link">
                 📖 Borrowed Books
             </a>
+            <!-- RIGHT MAIN CONTENT 
             <a href="#" class="sidebar-link">
                 🔁 Returns
-            </a>
+            </a>-->
           
 
             <p class="sidebar-section-label">ACCOUNT</p>
