--- a/Client/client_app/templates/client_app/dashboard.html
+++ b/Client/client_app/templates/client_app/dashboard.html
@@ -153,7 +153,7 @@
                 📖 Borrowed Books
             </a>
             <!-- <a href="#" class="sidebar-link">
-                🔁 Returns
+                {% comment %}  Returns {% endcomment %}
             </a> -->
         
 
