Refactor: Add 'Users' link to sidebar in dashboard template

--- a/Client/client_app/templates/client_app/dashboard.html
+++ b/Client/client_app/templates/client_app/dashboard.html
@@ -152,6 +152,8 @@
             <a href="#" class="sidebar-link">
                 📖 Borrowed Books
             </a>
+                 📖 users
+            </a>
             <!-- <a href="#" class="sidebar-link">
                 {% comment %}  Returns {% endcomment %}
             </a> -->
