Refactor: Update dashboard to link to users list and add edit user template

--- a/Client/client_app/templates/client_app/dashboard.html
+++ b/Client/client_app/templates/client_app/dashboard.html
@@ -152,7 +152,7 @@
             <a href="#" class="sidebar-link">
                 📖 Borrowed Books
             </a>
-            <a href="" class="sidebar-link">
+            <a href="{% url 'users_list' %}" class="sidebar-link">
                 📖 Users
             </a>
             
